--- a/app/globals.css
+++ b/app/globals.css
@@ -3,12 +3,11 @@
 @tailwind utilities;
 
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap");
-/* @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,500;0,600;0,700;1,200&display=swap"); */
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&display=swap");
 
 @layer base {
   html {
-    @apply font-rubik;
+    @apply font-rubik text-["#222"];
   }
 
   body {
